kube-manifests/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: node-demo
  name: node-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-demo
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: node-demo
    spec:
      volumes:
      - name: nginx-config
        configMap:
          name: nginx-config
          items:
          - key: config
            path: site.conf
      containers:
      - image: calvinrahmat/node-demo
        name: node-demo
        ports:
        - containerPort: 8080
        resources: {}
      - image: nginx:latest
        name: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/conf.d
        
status: {}
